--- a/style.css
+++ b/style.css
@@ -29,6 +29,16 @@ main button {
   margin: 1em;
 }
 
+main h1 {
+  background: white;
+  padding: 0.5em;
+  border-radius: 10px;
+}
+
+.test123 {
+  margin-top: 1em;
+}
+
 .numbers {
   width: 100%;
   display: flex;
